--- a/fixed-width.css
+++ b/fixed-width.css
@@ -1,5 +1,9 @@
+.container {
+    width: 800px;
+}
+
+
 p {
-    container-type: block;
     border: 5px solid black;
     padding: 10px;
     font-size: 16px;
