--- a/responsive.css
+++ b/responsive.css
@@ -53,7 +53,7 @@ body {
     
 }
 
-@media screen and (max-width: 500px ) and ( not ((width: 393px) and (height: 852px))) and ( not ((width: 384px) and (height: 824px))) {
+@media screen and (max-width: 500px ) and ( not ((min-width: 392px) and (min-height: 851px) and (max-width:394px) and (max-height: 853px))) and ( not ((width: 384px) and (height: 824px))) {
     .container {
         .p2, .p4 {
             display: none;
@@ -69,7 +69,7 @@ body {
     }
 }
 
-@media screen and (width: 393px) and (height: 852px){
+@media screen and (min-width: 392px) and (min-height: 851px) and (max-width:394px) and (max-height: 853px){
 
     .container {
         flex-direction: column;
@@ -110,5 +110,20 @@ body {
         color: red;
         font-size: 30px;
         width: 50vh;
+    }
+}
+
+@media print {
+    body, .container {
+        font-size: 1em;
+        color: black;
+        justify-content: center;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .p {
+        height: 45vh;
     }
 }
